# projeto_cadmed

./: .gitignore  Ccadcep.py  DCAD0000 - Copia.db  DCAD0000.db  Manual da Agenda.docx  README1.md  ccadconloc.py  ccaddb0.py  ccaddtoprm.py  main.py  pcadatuagen.py  pcadatucont.py  pcadatuende.py  pcadatuprof.py  pcadaturocm.py  pcadcons.py  pcadmanut.py  pcadmenu.py  pcadutil.py  pyproject copy.toml  pyproject.toml  pywbf01.py  pywbf02.py  pywbf03.py  testesql.txt
Doc/: Banco de dados.docx  CadDefDB.sql  DCAD0000 - Copia OK.db  Dicas PS1 criando ambiente virtual.txt  Errorsql.txt  Instrucoes.md  Para mudar a branch principal do Gi.txt  TrocaMasterMainGit.md  pysamplegui.txt  xxxxxxxxxxxxx.txt
projeto_cadmed/: __init__.py
